Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-30317

Transaction savepoint may cause failure in galera replaying

Details

    Description

      transaction savepoint statement inserts a corresponding query log event in binlog. Galera replication is not supposed to handle statement based replication events, but apparently this simple event goes well through galera replication nevertheless. But, otoh, if such transaction with savepoint has to replay in the sending node, the replaying may fail for missing character et information.

      This issue surfaced as part of MDEV-29684 testing, where the RQG grammar contains savepoints and causs replaying as well

      Attachments

        Issue Links

          Activity

            People

              jplindst Jan Lindström (Inactive)
              seppo Seppo Jaakola
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.